--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,11 @@
-/* You can add global styles to this file, and also import other style files */
+body {
+  /* min-width: 100vw; */
+  /* min-height: 50vh; */
+  background-color: #FDF1D8;
+  /* background-color: black; */
+  font-family: "Montserrat", sans-serif;
+}
+
+
+html, body { height: 100%; }
+body { margin: 0;  }
